--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -43,6 +45,10 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+		-->
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/react-vis/dist/dist.min.js"
+    ></script>
   </body>
 </html>
